--- a/package.json
+++ b/package.json
@@ -15,17 +15,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.0.3",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~12.0.3",
     "@angular/compiler": "~12.0.3",
     "@angular/core": "~12.0.3",
     "@angular/forms": "~12.0.3",
-    "@angular/platform-browser": "~12.0.3",
+    "@angular/material": "^12.0.5",
+    "@angular/platform-browser": "^12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/platform-server": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@angular/service-worker": "~12.0.3",
+    "@crystalui/angular-lightbox": "^1.1.8",
+    "@egjs/hammerjs": "^2.0.17",
     "@nguniversal/express-engine": "^12.0.2",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "angular-oauth2-oidc": "^10.0.3",
+    "angular-oauth2-oidc-jwks": "^9.0.0",
     "express": "^4.15.2",
+    "guid-typescript": "^1.0.9",
+    "ng-multiselect-dropdown": "^0.3.4",
+    "ngx-filter-pipe": "^2.1.2",
+    "ngx-infinite-scroll": "^10.0.1",
+    "ngx-material-timepicker": "^5.5.3",
+    "ngx-owl-carousel-o": "^6.0.0",
+    "ngx-page-scroll": "^7.0.5",
+    "ngx-page-scroll-core": "^7.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
