--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,16 @@
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
+    /*----------------------------*/
     "strict": true,
+    "noImplicitAny":false,
+    "noImplicitThis":true,
+    // "alwaysStrict":false,
+    // "strictBindCallApply":false,
+    "strictNullChecks":false,
+    // "strictFunctionTypes":false,
+    "strictPropertyInitialization": false,
+    /*----------------------------*/
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
