--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@angular/service-worker": "~12.0.3",
     "@crystalui/angular-lightbox": "^1.1.8",
     "@egjs/hammerjs": "^2.0.17",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@nguniversal/express-engine": "^12.0.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-oauth2-oidc-jwks": "^9.0.0",
+    "domino": "^2.1.6",
     "express": "^4.15.2",
     "guid-typescript": "^1.0.9",
     "ng-multiselect-dropdown": "^0.3.4",
@@ -60,6 +62,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "localstorage-polyfill": "^1.0.1",
     "typescript": "~4.2.3"
   }
 }
