--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-server": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@angular/service-worker": "~12.0.3",
+    "@aspnet/signalr": "^1.0.27",
     "@crystalui/angular-lightbox": "^1.1.8",
     "@egjs/hammerjs": "^2.0.17",
     "@fortawesome/fontawesome-free": "^5.15.3",
