--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
     "@angular/animations": "~12.0.3",
     "@angular/cdk": "^12.0.5",
     "@angular/common": "~12.0.3",
@@ -33,6 +34,7 @@
     "@nguniversal/express-engine": "^12.0.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "agm-direction": "^0.8.9",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-oauth2-oidc-jwks": "^9.0.0",
     "domino": "^2.1.6",
