--- a/src/web.config
+++ b/src/web.config
@@ -28,8 +28,10 @@
       </rewrite>
       <staticContent>
         <remove fileExtension=".json" />
+        <remove fileExtension=".webp" />
         <mimeMap fileExtension=".json" mimeType="application/json" />
         <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+        <mimeMap fileExtension=".webp" mimeType="image/webp" />
       </staticContent>
       <caching enabled="true" enableKernelCache="true">
           <profiles>
