--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "localstorage-polyfill": "^1.0.1",
+    "source-map-explorer": "^2.5.2",
     "typescript": "~4.2.3"
   }
 }
