--- a/src/web.config
+++ b/src/web.config
@@ -9,9 +9,9 @@
           <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
             <match url="^main.js\/debug[\/]?" />
           </rule>
-          <rule name="StaticContent">
+          <!-- <rule name="StaticContent">
             <action type="Rewrite" url="public{REQUEST_URI}"/>
-          </rule>
+          </rule> -->
           <rule name="redirect all requests" stopProcessing="true">
             <match url="^(.*)$" ignoreCase="false" />
             <conditions logicalGrouping="MatchAll">
