--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -4,7 +4,7 @@ on:
       - staging
 
 env:
-  AZURE_WEBAPP_NAME: remojuapp-v3u    # set this to your application's name
+  AZURE_WEBAPP_NAME: remojuapp-v3u    # set this to your application's name 20210720up
   AZURE_WEBAPP_PACKAGE_PATH: './dist/RemojuApp-V3U'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '14.x'                # set this to the node version to use
 
