--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "domino": "^2.1.6",
     "express": "^4.15.2",
     "guid-typescript": "^1.0.9",
+    "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "ng-multiselect-dropdown": "^0.3.4",
     "ngx-filter-pipe": "^2.1.2",
+    "ngx-image-cropper": "^4.0.1",
     "ngx-infinite-scroll": "^10.0.1",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-owl-carousel-o": "^6.0.0",
