--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "guid-typescript": "^1.0.9",
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
+    "ng-dialog-animation": "^9.0.4",
     "ng-multiselect-dropdown": "^0.3.4",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-image-cropper": "^4.0.1",
