--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.29.1",
     "ng-multiselect-dropdown": "^0.3.4",
+    "ngx-clipboard": "^14.0.1",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-image-cropper": "^4.0.1",
     "ngx-infinite-scroll": "^10.0.1",
