--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -15,6 +15,8 @@ jobs:
     environment: production
     steps:
     - uses: actions/checkout@v2
+      with:
+        persist-credentials: false
 
     - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v2
