--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -43,5 +43,5 @@ jobs:
       uses: azure/webapps-deploy@v1
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_REMOJUAPPV3U }}
+        publish-profile: ${{ secrets.AZURE_REMOJUAPPV3U_STAGE }}
         package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
