--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ng-dialog-animation": "^9.0.4",
     "ng-multiselect-dropdown": "^0.3.4",
     "ngx-clipboard": "^14.0.1",
+    "ngx-device-detector": "^3.0.0",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-image-cropper": "^4.0.1",
     "ngx-infinite-scroll": "^10.0.1",
