--- a/src/web.config
+++ b/src/web.config
@@ -1,42 +1,49 @@
 <configuration>
-    <system.webServer>
-      <webSocket enabled="false" />
-      <handlers>
-        <add name="iisnode" path="main.js" verb="*" modules="iisnode"/>
-      </handlers>
-      <rewrite>
-        <rules>
-          <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
-            <match url="^main.js\/debug[\/]?" />
-          </rule>
-          <!-- <rule name="StaticContent">
+  <system.webServer>
+    <webSocket enabled="false" />
+    <handlers>
+      <add name="iisnode" path="main.js" verb="*" modules="iisnode"/>
+    </handlers>
+    <rewrite>
+      <rules>
+        <rule name="NodeInspector" patternSyntax="ECMAScript" stopProcessing="true">
+          <match url="^main.js\/debug[\/]?" />
+        </rule>
+        <!-- <rule name="StaticContent">
             <action type="Rewrite" url="public{REQUEST_URI}"/>
           </rule> -->
-          <rule name="redirect all requests" stopProcessing="true">
-            <match url="^(.*)$" ignoreCase="false" />
-            <conditions logicalGrouping="MatchAll">
-              <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" pattern="" ignoreCase="false" />
-              <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-            </conditions>
-            <action type="Rewrite" url="main.js"/>
-          </rule>
-          <rule name="ProxyRule" stopProcessing="true">
-            <match url="^api/(.*)" />
-            <action type="Rewrite" url="https://remojuapi.azurewebsites.net/api/{R:1}" />
-          </rule>
-        </rules>
-      </rewrite>
-      <staticContent>
-        <remove fileExtension=".json" />
-        <remove fileExtension=".webp" />
-        <mimeMap fileExtension=".json" mimeType="application/json" />
-        <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
-        <mimeMap fileExtension=".webp" mimeType="image/webp" />
-      </staticContent>
-      <caching enabled="true" enableKernelCache="true">
-          <profiles>
-              <add extension=".js" policy="DisableCache" kernelCachePolicy="DisableCache" />
-          </profiles>
-      </caching>
-    </system.webServer>
-  </configuration>
+        <rule name="redirect all requests" stopProcessing="true">
+          <match url="^(.*)$" ignoreCase="false" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" pattern="" ignoreCase="false" />
+          </conditions>
+          <action type="Rewrite" url="main.js"/>
+        </rule>
+        <rule name="Angular Routes" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/index.html" />
+        </rule>
+        <rule name="ProxyRule" stopProcessing="true">
+          <match url="^api/(.*)" />
+          <action type="Rewrite" url="https://remojuapi.azurewebsites.net/api/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+    <staticContent>
+      <remove fileExtension=".json" />
+      <remove fileExtension=".webp" />
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".webmanifest" mimeType="application/manifest+json" />
+      <mimeMap fileExtension=".webp" mimeType="image/webp" />
+    </staticContent>
+    <caching enabled="true" enableKernelCache="true">
+      <profiles>
+        <add extension=".js" policy="DisableCache" kernelCachePolicy="DisableCache" />
+      </profiles>
+    </caching>
+  </system.webServer>
+</configuration>
