--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev:ssr": "ng run RemojuApp-V3U:serve-ssr",
     "serve:ssr": "node dist/RemojuApp-V3U/server/main.js",
     "build:ssr": "ng build && ng run RemojuApp-V3U:server",
-    "prerender": "ng run RemojuApp-V3U:prerender"
+    "prerender": "ng run RemojuApp-V3U:prerender",
+    "bundle-stats": "webpack-bundle-analyzer dist/RemojuApp-V3U/browser/stats.json"
   },
   "private": true,
   "dependencies": {
@@ -42,7 +43,6 @@
     "express": "^4.15.2",
     "guid-typescript": "^1.0.9",
     "hammerjs": "^2.0.8",
-    "moment": "^2.29.1",
     "ng-dialog-animation": "^9.0.4",
     "ng-multiselect-dropdown": "^0.3.4",
     "ngx-clipboard": "^14.0.1",
@@ -74,6 +74,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "localstorage-polyfill": "^1.0.1",
     "source-map-explorer": "^2.5.2",
-    "typescript": "~4.4.4"
+    "typescript": "~4.4.4",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
