--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -28,8 +28,8 @@ jobs:
         npm install
         # npm run build --prod
         npm run build:ssr
-        # npm run presenter
-        npm run presenter
+        # npm run prerender
+        npm run prerender
 
     - name: 'Move web.config to root'
       run: mv dist/RemojuApp-V3U/browser/web.config dist/RemojuApp-V3U/
