upd azure.yml prerender

--- a/angular.json
+++ b/angular.json
@@ -159,14 +159,7 @@
             ]
           },
           "configurations": {
-            "production": {
-              "browserTarget": "RemojuApp-V3U:build:production",
-              "serverTarget": "RemojuApp-V3U:server:production"
-            },
-            "development": {
-              "browserTarget": "RemojuApp-V3U:build:development",
-              "serverTarget": "RemojuApp-V3U:server:development"
-            }
+            "production": {}
           },
           "defaultConfiguration": "production"
         },
