--- a/angular.json
+++ b/angular.json
@@ -159,16 +159,8 @@
             ]
           },
           "configurations": {
-            "production": {
-              "browserTarget": "RemojuApp-V3U:build:production",
-              "serverTarget": "RemojuApp-V3U:server:production"
-            },
-            "development": {
-              "browserTarget": "RemojuApp-V3U:build:development",
-              "serverTarget": "RemojuApp-V3U:server:development"
-            }
-          },
-          "defaultConfiguration": "production"
+            "production": {}
+          }
         },
         "app-shell": {
           "builder": "@angular-devkit/build-angular:app-shell",
