--- a/angular.json
+++ b/angular.json
@@ -155,7 +155,8 @@
             "browserTarget": "RemojuApp-V3U:build:production",
             "serverTarget": "RemojuApp-V3U:server:production",
             "routes": [
-              "/"
+              "/",
+              "/ja/planspot"
             ]
           },
           "configurations": {
