--- a/angular.json
+++ b/angular.json
@@ -154,11 +154,11 @@
           "options": {
             "browserTarget": "RemojuApp-V3U:build:production",
             "serverTarget": "RemojuApp-V3U:server:production",
+            "guessRoutes": false,
             "routes": [
               "/",
               "/ja/planspot"
-            ],
-            "guessRoutes":false
+            ]
           },
           "configurations": {
             "production": {}
