--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -27,6 +27,8 @@ jobs:
         # deploy to Azure Web App.
         npm install
         # npm run build --prod
+        npm run build:ssr
+        # prerender
         npm run prerender
         
     - name: 'Move web.config to root'
