--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -27,8 +27,7 @@ jobs:
         # deploy to Azure Web App.
         npm install
         # npm run build --prod
-        npm run build:ssr
-        # prerender
+        # npm run build:ssr
         npm run prerender
         
     - name: 'Move web.config to root'
