--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "agm-direction": "^0.8.9",
     "angular-oauth2-oidc": "^10.0.3",
-    "angular-oauth2-oidc-jwks": "^9.0.0",
+    "angular-oauth2-oidc-jwks": "^13.0.1",
     "deepmerge": "^4.2.2",
     "domino": "^2.1.6",
     "express": "^4.15.2",
@@ -59,7 +59,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.3",
+    "@angular-devkit/build-angular": "^13.2.1",
     "@angular/cli": "~13.0.3",
     "@angular/compiler-cli": "~13.0.2",
     "@nguniversal/builders": "^13.0.1",
