--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.1.0",
+    "@angular-material-extensions/google-maps-autocomplete": "^7.0.1",
     "@angular/animations": "~13.0.2",
     "@angular/cdk": "^13.0.2",
     "@angular/common": "~13.0.2",
@@ -35,7 +36,6 @@
     "@nguniversal/express-engine": "^13.0.1",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "agm-direction": "^0.8.9",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-oauth2-oidc-jwks": "^13.0.1",
     "deepmerge": "^4.2.2",
