--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/common": "~13.0.2",
     "@angular/compiler": "~13.0.2",
     "@angular/core": "~13.0.2",
+    "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.0.2",
     "@angular/material": "^13.0.2",
     "@angular/platform-browser": "^13.0.2",
@@ -64,6 +65,7 @@
     "@angular/compiler-cli": "~13.0.2",
     "@nguniversal/builders": "^13.0.1",
     "@types/express": "^4.17.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
