remove inline style

--- a/angular.json
+++ b/angular.json
@@ -48,6 +48,7 @@
           },
           "configurations": {
             "production": {
+              "serviceWorker": true,
               "budgets": [{
                   "type": "initial",
                   "maximumWarning": "3mb",
