--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ngx-filter-pipe": "^2.1.2",
     "ngx-image-cropper": "^4.0.1",
     "ngx-infinite-scroll": "^10.0.1",
+    "ngx-loading": "^13.0.1",
     "ngx-material-timepicker": "^5.5.3",
     "ngx-owl-carousel-o": "^6.0.0",
     "ngx-page-scroll": "^7.0.5",
