--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@nguniversal/builders": "^13.0.1",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.43.3",
+    "@types/gtag.js": "^0.0.10",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
