--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
   "dependencies": {
     "@agm/core": "^1.1.0",
     "@angular-material-extensions/google-maps-autocomplete": "^7.0.1",
-    "@angular/animations": "~14.3.0",
+    "@angular/animations": "^14.3.0",
     "@angular/cdk": "^14.2.7",
-    "@angular/common": "~14.3.0",
-    "@angular/compiler": "~14.3.0",
-    "@angular/core": "~14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
     "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "~14.3.0",
+    "@angular/forms": "^14.3.0",
     "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^14.3.0",
-    "@angular/platform-browser-dynamic": "~14.3.0",
-    "@angular/platform-server": "~14.3.0",
-    "@angular/router": "~14.3.0",
-    "@angular/service-worker": "~14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/platform-server": "^14.3.0",
+    "@angular/router": "^14.3.0",
+    "@angular/service-worker": "^14.3.0",
     "@aspnet/signalr": "^1.0.27",
     "@azure/communication-email": "^1.0.0-beta.1",
     "@crystalui/angular-lightbox": "^1.1.8",
@@ -62,8 +62,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.11",
-    "@angular/cli": "~13.0.3",
-    "@angular/compiler-cli": "~14.3.0",
+    "@angular/cli": "^14.2.11",
+    "@angular/compiler-cli": "^14.3.0",
     "@nguniversal/builders": "^14.2.3",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.43.3",
