--- a/angular.json
+++ b/angular.json
@@ -43,13 +43,15 @@
               "includePaths": ["src/assets/scss"]
             },
             "scripts": [],
+            "allowedCommonJsDependencies": ["firebase", "@firebase/database"],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
             "production": {
               "serviceWorker": true,
-              "budgets": [{
+              "budgets": [
+                {
                   "type": "initial",
                   "maximumWarning": "3mb",
                   "maximumError": "3mb"
@@ -60,10 +62,12 @@
                   "maximumError": "100kb"
                 }
               ],
-              "fileReplacements": [{
-                "replace": "src/environments/environment.ts",
-                "with": "src/environments/environment.prod.ts"
-              }],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
               "outputHashing": "all"
             },
             "development": {
@@ -129,10 +133,12 @@
           "configurations": {
             "production": {
               "outputHashing": "media",
-              "fileReplacements": [{
-                "replace": "src/environments/environment.ts",
-                "with": "src/environments/environment.prod.ts"
-              }]
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             },
             "development": {
               "optimization": false,
@@ -161,10 +167,7 @@
           "options": {
             "browserTarget": "RemojuApp-V3U:build:production",
             "serverTarget": "RemojuApp-V3U:server:production",
-            "routes": [
-              "/",
-              "/ja/planspot"
-            ],
+            "routes": ["/", "/ja/planspot"],
             "guessRoutes": false
           },
           "configurations": {
