--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/common": "^14.3.0",
     "@angular/compiler": "^14.3.0",
     "@angular/core": "^14.3.0",
-    "@angular/fire": "^7.5.0",
+    "@angular/fire": "^7.4.0",
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "^14.3.0",
     "@angular/material": "^14.2.7",
@@ -66,6 +66,7 @@
     "@angular/cli": "^14.2.11",
     "@angular/compiler-cli": "^14.3.0",
     "@nguniversal/builders": "^14.2.3",
+    "@types/angularfire": "^0.8.34",
     "@types/express": "^4.17.0",
     "@types/googlemaps": "^3.43.3",
     "@types/gtag.js": "^0.0.10",
