--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@nguniversal/express-engine": "^14.2.3",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@types/gsap": "^3.0.0",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-oauth2-oidc-jwks": "^13.0.1",
     "deepmerge": "^4.2.2",
     "domino": "^2.1.6",
     "express": "^4.15.2",
+    "gsap": "^3.11.5",
     "guid-typescript": "^1.0.9",
     "hammerjs": "^2.0.8",
     "ng-dialog-animation": "^9.0.4",
