--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
     "lib": [
       "es2018",
       "dom"
-    ]    
+    ],
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true    
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
