--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,9 @@
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest",
-              "src/web.config"
+              "src/web.config",
+              "src/robots.txt",
+              "src/sitemap.xml"
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
