--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/gsap": "^3.0.0",
     "angular-oauth2-oidc": "^10.0.3",
     "angular-oauth2-oidc-jwks": "^13.0.1",
+    "core-js": "^3.33.3",
     "deepmerge": "^4.2.2",
     "domino": "^2.1.6",
     "express": "^4.15.2",
